--- a/iTunesHall-j/iTunesHall-j.csproj
+++ b/iTunesHall-j/iTunesHall-j.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Scripts\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
+  </ItemGroup>
+
 </Project>
